Reduce filesize of team images

--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
                     <div class="team-member-title">Founder (Tufts '28)</div>
                 </div>
                 <div class="team-member">
-                    <div class="team-member-image"><img src="images/Laker.png" alt="Laker Newhouse"></div>
+                    <div class="team-member-image"><img src="images/Laker.jpg" alt="Laker Newhouse"></div>
                     <div class="team-member-name">Laker Newhouse</div>
                     <div class="team-member-title">Founder (MIT '25)</div>
                 </div>
@@ -246,7 +246,7 @@
                     <div class="team-member-title">President of Kyiv School of Economics</div>
                 </div>
                 <div class="team-member">
-                    <div class="team-member-image"><img src="images/Taras.png" alt="Taras Pavlov"></div>
+                    <div class="team-member-image"><img src="images/Taras.jpg" alt="Taras Pavlov"></div>
                     <div class="team-member-name">Taras Pavlov</div>
                     <div class="team-member-title">Lead Translator and Curriculum Expert</div>
                 </div>
