--- a/index.html
+++ b/index.html
@@ -349,10 +349,19 @@
                 max-width: 80vw;
             }
             .content p.donation-info {
-                font-size: 2.0vw;
+                width: 80%;
+                font-size: 2.2vw;
+                text-align: center;
+                margin: 3vw auto 0vw auto;
+            }
+            header {
+                padding: 2vw 0;
             }
             header h1 {
                 font-size: 6vw;
+            }
+            .logo-container {
+                margin: 2vw 0;
             }
             .logo {
                 max-width: 40vw;
@@ -365,6 +374,7 @@
                 line-height: 10vw;
                 font-size: 4vw;
                 border-radius: 2.0vw;
+                margin: 4vw auto;
             }
             .donation-info {
                 font-size: 2vw;
@@ -402,6 +412,10 @@
                 height: 12vw;
             }
 
+            .progress-container {
+                width: 90%;
+                margin: 6vw auto 0 auto;
+            }
             .progress-bar {
                 height: 4vw;
                 border-radius: 2vw;
@@ -410,10 +424,10 @@
                 border-radius: 2vw;
             }
             .progress-text {
-                font-size: 3.6vw;
+                font-size: 4.2vw;
             }
             .progress-notice {
-                font-size: 2.6vw;
+                font-size: 3.0vw;
             }
         }
     </style>
