Update description metadata to help SEO

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Give every Ukrainian a free, world-class education through Khan Academy, making STEM education accessible and culturally relevant in Ukraine.">
     <title>Khan Academy for Ukraine 🇺🇦</title>
 
     <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png">
