Reduce globe image size slightly
Allows user to see more when they first load the page.

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
             border-bottom: 0.1vw solid #2c8a81;
         }
         .ka-image {
-            max-width: 70%;
+            max-width: 60%;
             min-width: 20vh;
             height: auto;
             display: block;
@@ -321,7 +321,7 @@
         }
 
         .progress-notice::before {
-            content: "Double Your Impact: $100K Matching Challenge (US tax-deductible)";
+            content: "Double Your Impact: Every Dollar Is Matched Up To $100K (US Tax-Deductible)";
             position: absolute;
             top: 0;
             left: 0;
@@ -459,7 +459,7 @@
             <a href="https://foundation.kse.ua/en/projects/khan-academy-for-ukraine/?form=FUNFDCXKQPK" class="donate-button">DONATE NOW</a>
             <div class="progress-container">
                 <div class="progress-text">$127,000 raised of $600,000 goal</div>
-                <div class="progress-notice">Double Your Impact: $100K Matching Challenge (US tax-deductible)</div>
+                <div class="progress-notice">Double Your Impact: Every Dollar Is Matched Up To $100K (US Tax-Deductible)</div>
                 <div class="progress-bar">
                     <div class="progress" id="progress-bar"></div>
                 </div>
