Resize font as 1em (not 2vh) for rotated mobile

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             margin: auto;
         }
         .content p, .content ul {
-            font-size: 2vh;
+            font-size: 1em;
         }
         .content p.donation-info {
             font-size: 0.8vw;
@@ -516,8 +516,8 @@
                     <div class="team-member-title">Lead Translator and Curriculum Expert</div>
                 </div>
             </div>
+            <p style="text-align: center">Contact: Nazar Drugov (nazar.drugov@tufts.edu) | Laker Newhouse (lakern@mit.edu)</p>
         </div>
-        <p style="text-align: center; font-size: 2.0vh;">Contact: Nazar Drugov (nazar.drugov@tufts.edu) | Laker Newhouse (lakern@mit.edu)</p>
     </div>
 
     <div class="hearts-container"></div>
