Remove Khan Academy logo per request

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
             min-width: 20vh;
             height: auto;
             display: block;
-            margin: 1.0vw auto;
+            margin: 2.0vw auto;
         }
         .hearts-container {
             position: fixed;
@@ -452,10 +452,6 @@
         <header>
             <h1>Khan Academy for Ukraine</h1>
         </header>
-        <div class="logo-container">
-            <img src="images/Khan Academy.png" alt="Khan Academy Logo" class="logo">
-            <img src="images/KSE Foundation.png" alt="KSE Foundation Logo" class="logo">
-        </div>
         <div class="content">
             <img src="images/You Can Learn Anything UK.png" alt="You Can Learn Anything in Ukrainian" class="ka-image">
             <a href="https://foundation.kse.ua/en/projects/khan-academy-for-ukraine/?form=FUNFDCXKQPK" class="donate-button">DONATE NOW</a>
@@ -519,6 +515,10 @@
                 </div>
             </div>
             <p style="text-align: center">Contact: Nazar Drugov (nazar.drugov@tufts.edu) | Laker Newhouse (lakern@mit.edu)</p>
+        </div>
+        <div class="logo-container">
+            <!-- <img src="images/Khan Academy.png" alt="Khan Academy Logo" class="logo"> -->
+            <img src="images/KSE Foundation.png" alt="KSE Foundation Logo" class="logo">
         </div>
     </div>
 
