Add Michael to the team section

--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
         }
         .team-member-name {
             font-weight: bold;
-            font-size: 1.2vw;
+            font-size: 1.18vw;
             margin-bottom: 0.5vw;
         }
         .team-member-title {
@@ -504,14 +504,19 @@
                     <div class="team-member-title">Founder (MIT '25)</div>
                 </div>
                 <div class="team-member">
-                    <div class="team-member-image"><img src="images/Tymofiy.jpg" alt="Tymofiy Mylovanov"></div>
-                    <div class="team-member-name">Tymofiy Mylovanov</div>
-                    <div class="team-member-title">President of Kyiv School of Economics</div>
+                    <div class="team-member-image"><img src="images/Michael.jpg" alt="Michael Malyshev"></div>
+                    <div class="team-member-name">Michael Malyshev</div>
+                    <div class="team-member-title">Director of U.S. Volunteers</div>
                 </div>
                 <div class="team-member">
                     <div class="team-member-image"><img src="images/Taras.jpg" alt="Taras Pavlov"></div>
                     <div class="team-member-name">Taras Pavlov</div>
                     <div class="team-member-title">Lead Translator and Curriculum Expert</div>
+                </div>
+                <div class="team-member">
+                    <div class="team-member-image"><img src="images/Tymofiy.jpg" alt="Tymofiy Mylovanov"></div>
+                    <div class="team-member-name">Tymofiy Mylovanov</div>
+                    <div class="team-member-title">President of Kyiv School of Economics</div>
                 </div>
             </div>
             <p style="text-align: center">Contact: Nazar Drugov (nazar.drugov@tufts.edu) | Laker Newhouse (lakern@mit.edu)</p>
