--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             margin: 0;
             padding: 0;
             background-color: #f0f0f0;
-            font-size: 16px;
+            font-size: 1em;
         }
         .container {
             max-width: 55vw;
@@ -97,7 +97,6 @@
             transform: scale(1.05);
         }
         .donation-info {
-            font-size: 0.8vh;
             text-align: center;
             margin-top: 1vw;
             color: #666;
@@ -180,11 +179,11 @@
         }
         .team-member-name {
             font-weight: bold;
-            font-size: 1.18vw;
+            font-size: 1.1em;
             margin-bottom: 0.5vw;
         }
         .team-member-title {
-            font-size: 1vw;
+            font-size: 1em;
             color: #666;
         }
 
@@ -311,7 +310,7 @@
         .progress-text {
             color: #333;
             font-weight: 700;
-            font-size: 1.8vw;
+            font-size: 2.0vw;
         }
         .progress-notice {
             font-size: 1vw;
